# yolov8_ros2

./: .gitignore  LICENSE  README.md  package.xml  setup.cfg  setup.py
launch/: camera.launch.py  camera_yolo.launch.py  vision_pub.launch.py  yolo.launch.py
yolov8_ros2/: camera_class.py  camera_ros_integration.py  vision_publisher.py  yolov8_node.py
